--- a/dockerfiles/Dockerfile.ui
+++ b/dockerfiles/Dockerfile.ui
@@ -1,7 +1,7 @@
-FROM python:3.12.2-slim
+FROM python:3.8-slim
 
 COPY requirements/requirements-ui.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY img_classification/ui img_classification/ui
-ENTRYPOINT ["streamlit", "run", "--server.fileWatcherType", "none", "ml_service/ui/app.py"]
+ENTRYPOINT ["streamlit", "run", "--server.fileWatcherType", "none", "img_classification/ui/app.py"]
